fix: align content in testimonials block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -696,6 +696,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-left: 91px;
 }
 .testimonials__feedback {
   width: 513px;
